# ai-mentor

./: .gitignore  .wiki.md  ANALYTICS_EXTENSION_REPORT.md  BACKEND_FIX_REPORT.md  BASELINE.md  CHANGELOG.md  COMPLETION.md  DATA_FOLDER_MIGRATION_GUIDE.md  FINAL_QUALITY_SAFETY_REPORT.md  FINAL_SELF_TEST_REPORT.md  FINAL_VALIDATION_REPORT.md  FINAL_VALIDATION_TEST.md  FINAL_VALIDATION_TEST.sh  HIDDEN_LAUNCHER_FIX_REPORT.md  HIDDEN_STARTUP_VALIDATION_REPORT.md  HIDDEN_STARTUP_VALIDATION_TEST.sh  INSTALLATION_GUIDE.md  MEMORY_COMMAND_FIX_REPORT.md  MIGRATION_FIX_REPORT.md  PERFORMANCE_FIX_REPORT.md  PERFORMANCE_PACK_REPORT.md  PREDICTION_LOGIC_REPORT.md  PYINST~1.spec  README.md  SAFETY_FLAGS.md  SELF_TEST_REPORT.md  STATUS.md  SYSTEM_PROMPT_IMPROVEMENT_REPORT.md  TRUE_HIDDEN_LAUNCHER_REPORT.md  UX_IMPROVEMENT_REPORT.md  VALIDATION_REPORT.md  launch_hidden.bat  launcher.py  package-lock.json  run_build.cmd  start_hidden.bat  start_hidden_powershell.ps1  start_windows.bat  start_windows_hidden.vbs  stop_windows.bat  (+1 more)
app/frontend/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
app/frontend/src-tauri/icons/: README.md
app/frontend/src-tauri/src/: backend_manager.rs  lib.rs  main.rs
app/frontend/src-tauri/windows/: hooks.nsh
backend/: .env.example  ai_service.py  analytics_models.py  analytics_service.py  backend_entry.py  conversation_service.py  create_schema.py  create_schema.py.py  data_collector.py  data_sources_service.py  database.py  knowledge_service.py  main.py  memory_service.py  migrate_analytics.py  migrate_sources.py  models.py  pytest.ini  requirements.txt  (+6 more)
(+763 files in other folders)
