[package]
name = "ai-mentor-desktop"
version = "0.1.0"
description = "AI Mentor desktop (Tauri)"
authors = ["AI Mentor"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]





